Z-index fix

--- a/css/corporate-ui-sc-select.css
+++ b/css/corporate-ui-sc-select.css
@@ -88,7 +88,7 @@
      background-color: #FFFFFFFF;
 }
  .select2-drop-mask {
-     z-index: -1;
+     z-index: 2;
 }
  .select2-drop {
      margin-top: 5px;
@@ -98,7 +98,7 @@
      border: 1px solid #f5f5f5;
      border-radius: 0px;
      box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 8px;
-     z-index: 100;
+     z-index: 500;
 }
  .select2-drop.select2-drop-above {
      margin-top: 1px;
@@ -107,7 +107,7 @@
      border-radius: 0px;
      -webkit-box-shadow: none;
      box-shadow: none;
-     z-index: 0;
+     z-index: 500;
 }
  .select2-drop.select2-drop-above.select2-drop-active {
      box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 8px;
@@ -119,7 +119,6 @@
      padding: 10px;
      background-color: #f5f5f5;
      border: 8px solid #fff;
-     z-index: 1;
 }
  .compact .select2-search {
      padding: 1px;
@@ -351,7 +350,7 @@ header.c-page-header table .select2-container-multi .select2-choices .select2-se
 }
  header.c-page-header .select2-container-active .select2-choices, header.c-page-header .select2-container-active .select2-search-field {
      background: rgb(242, 247, 249)!important;
-     z-index: 1000;
+     /*z-index: 1000;*/
 }
  .select2-container .select2-choice abbr {
      right: 22%;
